<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.asteam.balloonsnorth.Menu">

    <ImageView
        android:id="@+id/imageViewSplashImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/splashScreen"
        android:src="@mipmap/splash_img"/>

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">
        <!-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="35dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp">

                        <android.support.v7.widget.CardView
                            android:id="@+id/cvAbout"
                            android:layout_width="120dp"
                            android:layout_height="120dp"

                            android:textSize="25sp"
                            app:cardElevation="@dimen/cardview_default_elevation"
                            card_view:cardBackgroundColor="@color/mainButtonsColor">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:elevation="10dp"
                                android:padding="16dp"
                                >

                                <TextView
                                    android:id="@+id/tvAbout"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentTop="true"
                                    android:gravity="center"
                                    android:text="@string/about"
                                    android:textSize="25dp"
                                    />
                            </RelativeLayout>
                        </android.support.v7.widget.CardView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="35dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp">

                        <android.support.v7.widget.CardView
                            android:id="@+id/cvWeekSpecials"
                            android:layout_width="120dp"
                            android:layout_height="120dp"

                            android:textSize="25sp"
                            app:cardElevation="@dimen/cardview_default_elevation"
                            card_view:cardBackgroundColor="@color/mainButtonsColor">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:elevation="10dp"
                                android:padding="16dp"
                                >

                                <TextView
                                    android:id="@+id/tvWeekSpecials"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentTop="true"
                                    android:gravity="center"
                                    android:text="@string/WeekSpecials"
                                    android:textSize="25dp"
                                    />
                            </RelativeLayout>
                        </android.support.v7.widget.CardView>
                    </LinearLayout>
                    <-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnWeekSpecials"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginEnd="@dimen/menuButtonsMarginEnd"
                android:layout_marginStart="@dimen/menuButtonsMarginStart"
                android:layout_weight="1"
                android:background="@drawable/custom_menu_button"
                android:text="@string/weekSpecials"
                android:textColor="@color/menuButtonTextColor"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/btnAbout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginEnd="@dimen/menuButtonsMarginEnd"
                android:layout_marginStart="@dimen/menuButtonsMarginStart"
                android:layout_weight="1"
                android:background="@drawable/custom_menu_button"
                android:elevation="0sp"
                android:text="@string/about"
                android:textColor="#FFFFFF"
                android:textSize="25sp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/menuLinearMargin"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnPackages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginEnd="@dimen/menuButtonsMarginEnd"
                android:layout_marginStart="@dimen/menuButtonsMarginStart"
                android:layout_weight="1"
                android:background="@drawable/custom_menu_button"
                android:text="@string/packages"
                android:textColor="#FFFFFF"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/btnOurProducts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginEnd="@dimen/menuButtonsMarginEnd"
                android:layout_marginStart="@dimen/menuButtonsMarginStart"
                android:layout_weight="1"
                android:background="@drawable/custom_menu_button"
                android:text="@string/ourProducts"
                android:textColor="#FFFFFF"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnFriendsRecommend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginEnd="@dimen/menuButtonsMarginEnd"
                android:layout_marginStart="@dimen/menuButtonsMarginStart"
                android:layout_weight="1"
                android:background="@drawable/custom_menu_button"
                android:text="@string/friendsRecommend"
                android:textColor="#FFFFFF"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/btnPortfolio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginEnd="@dimen/menuButtonsMarginEnd"
                android:layout_marginStart="@dimen/menuButtonsMarginStart"
                android:layout_weight="1"
                android:background="@drawable/custom_menu_button"
                android:text="@string/portfolio"
                android:textColor="#FFFFFF"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/menuLinearMargin"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageButton
                android:id="@+id/btnImgFacebook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="8"
                android:adjustViewBounds="true"
                android:contentDescription="@string/facebook"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@mipmap/facebook_logo"/>

            <Button
                android:id="@+id/btnCallUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="#248f24"
                android:text="@string/callUs"
                android:textColor="#FFFFFF"
                android:textSize="25sp"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>